# project_extraction

./: .flake8  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yaml  deploy.yaml  main.yaml
examples/: neuromodulators.py  old_pipeline.py
iblrig_custom_tasks/_sp_passiveVideo/: README.md  task.py  task_parameters.yaml  test_sp_videoPassive.py
iblrig_custom_tasks/max_optoStaticTrainingChoiceWorld/: PulsePal.py  task.py  task_parameters.yaml
iblrig_custom_tasks/max_staticTrainingChoiceWorld/: task.py  task_parameters.yaml
iblrig_custom_tasks/nate_adaptiveTimeoutChoiceWorld/: task.py  task_parameters.yaml
iblrig_custom_tasks/nate_optoBiasedChoiceWorld/: task.py  task_parameters.yaml  test_nate_optoBiasedChoiceWorld.py
iblrig_custom_tasks/plau_oddBallAudio/: README.md  sound_sequence.csv  task.py  task_parameters.yaml  test_plau_oddBallAudio.py
iblrig_custom_tasks/samuel_cuedBiasedChoiceWorld/: task.py  task_parameters.yaml  task_validation.py  test_samuel_cuedBiasedChoiceWorld.py
projects/: _examples.py  _sp_passiveVideo.py  _template.py  alejandro_FPLROptoChoiceWorld.py  base.py  biased_fibrephotometry.py  ephys_bandit.py  ephys_passive_opto.py  extraction_tasks.py  extractor_types.json  krasniak_widefield.py  max_optoStaticTrainingChoiceWorld.py  nate_optoBiasedChoiceWorld.py  neuromodulators.py  samuel_cuedBiasedChoiceWorld.py  task_extractor_map.json  task_type_procedures.json  test_biased_fibrephotometry.py  test_ephys_passive_opto.py  test_ephys_training_bandit.py  test_krasniak_widefield.py  training_bandit.py
projects/tests/: test_biased_fibrephotometry.py  test_ephys_passive_opto.py  test_ephys_training_bandit.py  test_krasniak_widefield.py  test_passiveVideo.py
