[build-system]
requires      = [ "setuptools>=64", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "project_extraction"
version = "0.1.0"
description = "Custom extractors for satellite tasks"
dynamic = [ "readme"]
keywords = [ "IBL", "neuro-science" ]
requires-python = "~=3.10"
license = { file = "LICENSE" }
dependencies = [
    "iblrig",
]

[tool.setuptools.dynamic]
readme  = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages]
find = {}
