[build-system]
requires      = [ "setuptools>=64" ]
build-backend = "setuptools.build_meta"

[project]
name            = "project_extraction"
version         = "0.2.2"
description     = "Custom extractors for satellite tasks"
dynamic         = [ "readme" ]
keywords        = [ "IBL", "neuro-science" ]
requires-python = "~=3.10"
license         = { file = "LICENSE" }

[project.optional-dependencies]
passiveVideo    = [ "python-vlc" ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages]
find = {}
