[build-system]
requires      = [ "setuptools>=64" ]
build-backend = "setuptools.build_meta"

[project]
name            = "project_extraction"
version         = "0.5.0post0"
description     = "Custom extractors for satellite tasks"
dynamic         = [ "readme" ]
keywords        = [ "IBL", "neuro-science" ]
requires-python = "~=3.10"
license         = { file = "LICENSE" }

[project.optional-dependencies]
passiveVideo    = [ "python-vlc" ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools.packages]
find = {}

[tool.ruff]
ignore = [
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]
exclude = [
    ".mypy_cache",
    "dist",
    "docs",
    "iblrig/gui/*_rc.py",
    "iblrig/gui/ui_*.py",
    "venv",
]
indent-width = 4
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [ "ibl*", "one*", "pybpod*" ]
